# docs/swagger.yaml
@@ -132,6 +132,96 @@ definitions:
       mobilePhone:
         type: string
     type: object
+  order.OrderDetailItem:
+    properties:
+      id:
+        type: integer
+      order_id:
+        type: integer
+      product_id:
+        type: integer
+      product_name:
+        type: string
+      quantity:
+        type: number
+      unit_price:
+        type: number
+    type: object
+  order.OrderItem:
+    properties:
+      address:
+        type: string
+      city:
+        type: string
+      company:
+        type: string
+      customer:
+        type: string
+      customerId:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/order.OrderDetailItem'
+        type: array
+      orderDate:
+        type: string
+      orderId:
+        type: integer
+      phone:
+        type: string
+      statusId:
+        type: string
+      statusName:
+        type: string
+    type: object
+  order.OrderList:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/order.OrderItem'
+        type: array
+      totalRecords:
+        type: integer
+    type: object
+  order.addOrderDetailRequest:
+    properties:
+      id:
+        type: integer
+      orderID:
+        type: integer
+      productID:
+        type: integer
+      quantity:
+        type: integer
+      unitPrice:
+        type: number
+    type: object
+  order.addOrderRequest:
+    properties:
+      customerID:
+        type: integer
+      id:
+        type: integer
+      orderDate:
+        type: string
+      orderDetails:
+        items:
+          $ref: '#/definitions/order.addOrderDetailRequest'
+        type: array
+    type: object
+  order.getOrdersRequest:
+    properties:
+      dateFrom:
+        type: object
+      dateTo:
+        type: object
+      limit:
+        type: integer
+      offset:
+        type: integer
+      status:
+        type: object
+    type: object
   product.Product:
     properties:
       category:
@@ -361,6 +451,127 @@ paths:
       summary: Lista de Empleados
       tags:
       - Employee
+  /orders/:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User Data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/order.addOrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: integer
+      summary: Insertar Order
+      tags:
+      - Order
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: User Data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/order.addOrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: integer
+      summary: Update Order
+      tags:
+      - Order
+  /orders/{id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Order Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: integer
+      summary: Eliminar Orden
+      tags:
+      - Order
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Order Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            $ref: '#/definitions/order.OrderItem'
+      summary: Order by Id
+      tags:
+      - Order
+  /orders/{orderId}/detail/{orderDetailId}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Order Detail Id
+        in: path
+        name: orderDetailId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            type: integer
+      summary: Eliminar elemento del detalle de la Orden
+      tags:
+      - Order
+  /orders/paginated:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User Data
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/order.getOrdersRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ok
+          schema:
+            $ref: '#/definitions/order.OrderList'
+      summary: Lista de Ordenes
+      tags:
+      - Order
   /products/:
     post:
       consumes:
